finished Deutsch-Josza file

--- a/large_qubit-systems_experimentation_code.ipynb
+++ b/large_qubit-systems_experimentation_code.ipynb
@@ -10,18 +10,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This file contains experimentations on larger systems error-correction. Due to the lack of availability of a large-scale quantum computer, none of these codes have been tested on an actual quantum computer and they may or may not fully work. We encourage the reader to follow along the procedures with a critical mindset and please reach out to philippe_noel@college.harvard.edu should you find any errors or think of any improvements that can be added."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from qiskit import QuantumProgram\n",
+    "from qiskit.tools.visualization import plot_histogram\n",
+    "from qiskit.backends import local_backends, remote_backends\n",
+    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
+    "from qutip import *\n",
+    "from IPython.display import display, HTML\n",
+    "import Qconfig\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python3.6/site-packages/qiskit/_quantumprogram.py:707: DeprecationWarning: set_api() will be deprecated in upcoming versions (>0.5.0). Using the API object instead is recommended.\n",
+      "  \"Using the API object instead is recommended.\", DeprecationWarning)\n",
+      "/anaconda/lib/python3.6/site-packages/qiskit/_quantumprogram.py:909: DeprecationWarning: get_backend_status() will be deprecated in upcoming versions (>0.5.0). Using qiskit.backends.get_backend_instance('name').status instead is recommended.\n",
+      "  \"instead is recommended.\", DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'available': True, 'backend': 'ibmqx4', 'pending_jobs': 257}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Run circuit without any errors on IBMQ backend\n",
+    "qp3 = QuantumProgram()\n",
+    "\n",
+    "qp3.set_api(Qconfig.APItoken, Qconfig.config['url']) # set the APIToken and API url\n",
+    "\n",
+    "qp3.get_backend_status('ibmqx4')\n",
+    "\n",
+    "#Q_program.get_backend_status('ibmqx4')\n"
+   ]
   },
   {
    "cell_type": "code",
