--- a/large_qubit-systems_experimentation_code.ipynb
+++ b/large_qubit-systems_experimentation_code.ipynb
@@ -5,79 +5,212 @@
    "metadata": {},
    "source": [
     "# Quantum Error Correction Project\n",
-    "## Philippe Noël, Alaisha Sharma, Nicolas Weninger\n",
+    "## Philippe M. Noël, Alaisha Sharma, Nicolas Weninger\n",
     "### File #4: Large qubit-systems error correction experimentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "from qutip import *\n",
+    "\n",
+    "from qiskit import QuantumProgram\n",
+    "import Qconfig\n",
+    "from qiskit.tools.visualization import plot_histogram, plot_state\n",
+    "from qiskit.backends import local_backends, remote_backends\n",
+    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
+    "\n",
+    "assert sys.version_info >= (3,5), \"Only Python 3.5 or greater supported.\"\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display, HTML, Image"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file contains experimentations on larger systems error-correction. Due to the lack of availability of a large-scale quantum computer, none of these codes have been tested on an actual quantum computer and they may or may not fully work. We encourage the reader to follow along the procedures with a critical mindset and please reach out to philippe_noel@college.harvard.edu should you find any errors or think of any improvements that can be added."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit import QuantumProgram\n",
-    "from qiskit.tools.visualization import plot_histogram\n",
-    "from qiskit.backends import local_backends, remote_backends\n",
-    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
-    "from qutip import *\n",
-    "from IPython.display import display, HTML\n",
-    "import Qconfig\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/lib/python3.6/site-packages/qiskit/_quantumprogram.py:707: DeprecationWarning: set_api() will be deprecated in upcoming versions (>0.5.0). Using the API object instead is recommended.\n",
-      "  \"Using the API object instead is recommended.\", DeprecationWarning)\n",
-      "/anaconda/lib/python3.6/site-packages/qiskit/_quantumprogram.py:909: DeprecationWarning: get_backend_status() will be deprecated in upcoming versions (>0.5.0). Using qiskit.backends.get_backend_instance('name').status instead is recommended.\n",
-      "  \"instead is recommended.\", DeprecationWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'available': True, 'backend': 'ibmqx4', 'pending_jobs': 250}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Run circuit without any errors on IBMQ backend\n",
-    "qp3 = QuantumProgram()\n",
-    "\n",
-    "qp3.set_api(Qconfig.APItoken, Qconfig.config['url']) # set the APIToken and API url\n",
-    "\n",
-    "qp3.get_backend_status('ibmqx4')\n",
-    "\n",
-    "#Q_program.get_backend_status('ibmqx4')\n"
+    "The 9-qubit error correction scheme is promising because it can detect and correct both bit flips and phase flips (one of each) that could even occur on the same qubit. The circuit below error corrects for three logical qubits by mapping each one to its own 9-qubit error correction scheme. If we could successfully run this circuit then we could be able to perform both bit flip and phase flip error correction for a 3-qubit Deutsch-Josza circuit. Unfortunately, Python itself starts to slow down on computations involving more than 20 qubits (20 qubits means $2^{20}$ possible states and for this scheme we need to use 27 qubits). Although we would not be able to run this circuit it is interesting to think about possible optimizations that might allow error correction of a larger number of logical qubits."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 9 qubits times three\n",
+    "n = 27\n",
+    "\n",
+    "# Circuit to large to run on local quantum simulator\n",
+    "qpL = QuantumProgram()\n",
+    "\n",
+    "# Quantum register\n",
+    "q = qpL.create_quantum_register(\"q\", n) \n",
+    "# Classical register\n",
+    "c = qpL.create_classical_register(\"c\", n) \n",
+    "\n",
+    "# LargeExperiment circuit\n",
+    "large_exp27 = qpL.create_circuit(\"LargeExperiment27\", [q], [c])\n",
+    "\n",
+    "# Arbitrary states \n",
+    "large_exp27.h(q[0])\n",
+    "large_exp27.h(q[9])\n",
+    "large_exp27.h(q[18])\n",
+    "\n",
+    "# Encoding state 1\n",
+    "large_exp27.cx(q[0],q[3])\n",
+    "large_exp27.cx(q[0],q[6])\n",
+    "\n",
+    "large_exp27.h(q[0])\n",
+    "large_exp27.h(q[3])\n",
+    "large_exp27.h(q[6])\n",
+    "\n",
+    "large_exp27.cx(q[0],q[1])\n",
+    "large_exp27.cx(q[0],q[2])\n",
+    "\n",
+    "large_exp27.cx(q[3],q[4])\n",
+    "large_exp27.cx(q[3],q[5])\n",
+    "\n",
+    "large_exp27.cx(q[6],q[7])\n",
+    "large_exp27.cx(q[6],q[8])\n",
+    "\n",
+    "# Encoding state 2\n",
+    "large_exp27.cx(q[9],q[12])\n",
+    "large_exp27.cx(q[9],q[15])\n",
+    "\n",
+    "large_exp27.h(q[9])\n",
+    "large_exp27.h(q[12])\n",
+    "large_exp27.h(q[15])\n",
+    "\n",
+    "large_exp27.cx(q[9],q[10])\n",
+    "large_exp27.cx(q[9],q[11])\n",
+    "\n",
+    "large_exp27.cx(q[12],q[13])\n",
+    "large_exp27.cx(q[12],q[14])\n",
+    "\n",
+    "large_exp27.cx(q[15],q[16])\n",
+    "large_exp27.cx(q[15],q[17])\n",
+    "\n",
+    "# Encoding state 3\n",
+    "large_exp27.cx(q[18],q[21])\n",
+    "large_exp27.cx(q[18],q[24])\n",
+    "\n",
+    "large_exp27.h(q[18])\n",
+    "large_exp27.h(q[21])\n",
+    "large_exp27.h(q[24])\n",
+    "\n",
+    "large_exp27.cx(q[18],q[19])\n",
+    "large_exp27.cx(q[18],q[20])\n",
+    "\n",
+    "large_exp27.cx(q[21],q[22])\n",
+    "large_exp27.cx(q[21],q[23])\n",
+    "\n",
+    "large_exp27.cx(q[24],q[25])\n",
+    "large_exp27.cx(q[24],q[26])\n",
+    "\n",
+    "# Bit flip detection and correction 1\n",
+    "large_exp27.cx(q[0],q[1])\n",
+    "large_exp27.cx(q[0],q[2])\n",
+    "large_exp27.ccx(q[1],q[2],q[0])\n",
+    "\n",
+    "large_exp27.cx(q[3],q[4])\n",
+    "large_exp27.cx(q[3],q[5])\n",
+    "large_exp27.ccx(q[4],q[5],q[3])\n",
+    "\n",
+    "large_exp27.cx(q[6],q[7])\n",
+    "large_exp27.cx(q[6],q[8])\n",
+    "large_exp27.ccx(q[7],q[8],q[6])\n",
+    "\n",
+    "# Bit flip detection and correction 2\n",
+    "large_exp27.cx(q[9],q[10])\n",
+    "large_exp27.cx(q[9],q[11])\n",
+    "large_exp27.ccx(q[10],q[11],q[9])\n",
+    "\n",
+    "large_exp27.cx(q[12],q[13])\n",
+    "large_exp27.cx(q[12],q[14])\n",
+    "large_exp27.ccx(q[13],q[14],q[12])\n",
+    "\n",
+    "large_exp27.cx(q[15],q[16])\n",
+    "large_exp27.cx(q[15],q[17])\n",
+    "large_exp27.ccx(q[16],q[17],q[15])\n",
+    "\n",
+    "# Bit flip detection and correction 3\n",
+    "large_exp27.cx(q[18],q[19])\n",
+    "large_exp27.cx(q[18],q[20])\n",
+    "large_exp27.ccx(q[19],q[20],q[18])\n",
+    "\n",
+    "large_exp27.cx(q[21],q[22])\n",
+    "large_exp27.cx(q[21],q[23])\n",
+    "large_exp27.ccx(q[22],q[23],q[21])\n",
+    "\n",
+    "large_exp27.cx(q[24],q[25])\n",
+    "large_exp27.cx(q[24],q[26])\n",
+    "large_exp27.ccx(q[25],q[26],q[24])\n",
+    "\n",
+    "# Phase flip detection 1\n",
+    "large_exp27.h(q[0])\n",
+    "large_exp27.h(q[3])\n",
+    "large_exp27.h(q[6])\n",
+    "\n",
+    "large_exp27.cx(q[0],q[3])\n",
+    "large_exp27.cx(q[0],q[6])\n",
+    "\n",
+    "# Phase flip correction 1\n",
+    "large_exp27.ccx(q[3],q[6],q[0])\n",
+    "\n",
+    "# Phase flip detection 2\n",
+    "large_exp27.h(q[9])\n",
+    "large_exp27.h(q[12])\n",
+    "large_exp27.h(q[15])\n",
+    "\n",
+    "large_exp27.cx(q[9],q[12])\n",
+    "large_exp27.cx(q[9],q[15])\n",
+    "\n",
+    "# Phase flip correction 2\n",
+    "large_exp27.ccx(q[12],q[15],q[9])\n",
+    "\n",
+    "# Phase flip detection 3\n",
+    "large_exp27.h(q[18])\n",
+    "large_exp27.h(q[21])\n",
+    "large_exp27.h(q[24])\n",
+    "\n",
+    "large_exp27.cx(q[18],q[21])\n",
+    "large_exp27.cx(q[18],q[24])\n",
+    "\n",
+    "# Phase flip correction 3\n",
+    "large_exp27.ccx(q[21],q[24],q[18])\n",
+    "\n",
+    "# Add measurement \n",
+    "large_exp27.measure(q[0], c[0])\n",
+    "large_exp27.measure(q[9], c[9])\n",
+    "large_exp27.measure(q[18], c[18])\n",
+    "\n",
+    "# Execute circuit\n",
+    "results = qpL.execute(\"LargeExperiment27\", shots = 50)\n",
+    "\n",
+    "# Plot measurement results\n",
+    "print(\"Measurement after gate without errors:\")\n",
+    "plot_histogram(results.get_counts(\"LargeExperiment27\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -98,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
