--- a/three_qubits_QEC_code.ipynb
+++ b/three_qubits_QEC_code.ipynb
@@ -47,14 +47,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"3_qubits_circuit.png\">"
+    "<img src=\"img/3_qubits_circuit.png\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"3_qubits_code_ancilla_table.png\">"
+    "<img src=\"img/3_qubits_code_ancilla_table.png\">"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"3_qubits_decoder.png\">"
+    "<img src=\"img/3_qubits_decoder.png\">"
    ]
   },
   {
@@ -695,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"3_qubits_code_error_locations.png\">"
+    "<img src=\"img/3_qubits_code_error_locations.png\">"
    ]
   },
   {
@@ -979,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
