--- a/large_qubit-systems_experimentation_code.ipynb
+++ b/large_qubit-systems_experimentation_code.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Quantum Error Correction Project\n",
-    "## Philippe M. Noël, Alaisha Sharma, Nicolas Weninger\n",
+    "## Philippe Noël, Alaisha Sharma, Nicolas Weninger\n",
     "### File #4: Large qubit-systems error correction experimentation"
    ]
   },
